--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 </div>
                 <div class="col-xl-5 col-md-5">
                 	<div class="banner_img animation" data-animation="fadeInUp" data-animation-delay="0.02s">
-                    	<img src="assets/images/my_image1.png" alt="my_image"/>
+                    	<img src="https://res.cloudinary.com/dyvjssivl/image/upload/v1693949578/IMG_4755-removebg-preview_f0zt2l.png" alt="my_image"/>
                     </div>
                 </div>
             </div>
